Feat: Add metrics with actuator and micormeter. Also create health check endpoint